1.1.2
  - util.normalizeFilename
  - added some util tests
  - crud_models get interceptable (control flow can be intercepted via _beforeResponse)
  - siteVersion, caminioVersion as variable in layouts
  - crud update calls mongoose' update on instantiated model (instead of Model class) which
    causes middleware to get executed
  - restore functionallity in autorest with :id/restore, a model can be restored

1.1.1
  - Fix Issues #1: singular/plural policies definition mixed up by loader
  - config/site.js (options to config the current site) current options: 'name'
  - lib/util/index: new function - formatErrors( <MongooseErrors> )
  - autorest with sideload and namespace features
  - autorest auto updates updatedBy updatedAt (if available)
  - autorest index works same as /find

1.1.0
  - entirely new oauth implementation
  - new controller definition (not compatible to older versions)
  - mailer (caminio.mailer.send is a simple mailer implementation with nodemailer)
  - audit.log
  - caminio.mainGear references to the directory of the gear initializing caminio