@@ -160,6 +160,13 @@ module.exports.getCaller = function getCaller() {
   return stack[1].receiver
 }
 
+module.exports.getFilename = function getFilename( filename ){
+  var arr = filename.split('.');
+  if( arr.length > 1 )
+    arr.pop();
+  return arr.join('.');
+}
+
 /**
  * @private
  */
